# fast-ibem

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/Modules/: FindSCOTCH.cmake
include/: CollocationAssembly.h  Functor.h  GalerkinAssembly.h  HAssembly.h  Kernel.h  KernelIntegrator.h  MaterialParam.h
input/: .gitignore  cube.hbs  cubic_patch.hbs  degenerate_patch.hbs  emag.inp  fichera.hbs  geo_1cell_tesla.hbs  linear_surface_cube.hbs  nasa_almond_approx_degenerate.hbs  nasa_almond_graded.hbs  nasa_almond_reduced.hbs  nasa_almond_regular.hbs  nasa_almond_regular_equalknots.hbs  nasa_almond_unclosed.hbs  nondegenerate_nasa_almond.hbs  nondegenerate_nasa_almond_patch.hbs  nondegenerate_nasa_almond_regular.hbs  nondegnerate_nasa_almond.hbs  patch.hbs  quartic_surface_cube.hbs  rubens_nasa_almond.hbs  sphere.hbs  stealth-concept.hbs  stealth.hbs  torus_test.hbs
src/: CollocationAssembly.cpp  HAssembly.cpp
tests/: CMakeLists.txt  DirectSolverTest.cpp  EmagTest.cpp  IntegratorTest.cpp  MieSphereRCSTest.cpp  ProjectionTest.cpp  RCSTest.cpp
